# eink-server

./: LICENSE  README.md  setup.cfg
samples/slideshow/: slideshow_server.py
samples/weather/: weather_server.py
samples/wikipedia/: wikipedia_server.py
src/eink/assets/client/: byte_array.cpp  byte_array.h  client.ino  client_state.h  define_test_eink.h  draw_image.cpp  draw_image.h  eink_client.cpp  eink_client.h  eink_client_test.cpp  generated_constants.h  pngle.h  request.cpp  request.h  response.cpp  response.h  secrets_constants.h  server_io.cpp  server_io.h  server_io_test.cpp  shared.cpp  shared.h  status_images.cpp  status_images.h  wi_fi_request.cpp  wi_fi_request.h
src/eink/assets/server_skeleton/: app.py.tpl  gen_client_code.py.tpl  my_server.py.tpl  my_server_low_res.py.tpl  requirements.txt
src/eink/cli/: cli.py
src/eink/generate/: __init__.py  client_code_generator.py  client_config.py  device.py  rotation.py  server_code_generator.py  status_images.py  transport.py  web_transport.py
src/eink/image/: __init__.py  eink_graphics.py  image_data.py  palette.py
src/eink/project/: project.py
src/eink/server/: __init__.py  errors.py  request.py  response.py  server.py  server_io.py  simulator.py
tests/eink/generate/: server_code_generator_test.py  status_images_test.py
tests/eink/image/: eink_graphics_test.py  image_data_test.py  palette_test.py
tests/eink/server/: request_test.py  response_test.py  server_io_test.py  server_test.py  test_server.py
