[metadata]
name = eink-server
version = 0.1.0
author = William Jacobs
author_email = billjjacobs@gmail.com
description = A framework for displaying content on an Inkplate e-ink display
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/btrekkie/eink-server
project_urls =
    Bug Tracker = https://github.com/btrekkie/eink-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.4
install_requires =
    Pillow

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    einkserver = eink.cli.cli:eink_server_cli

[options.package_data]
eink = assets/**/*
